--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 
 <body>
     <div class="container">
-        <h1>Add the name of your role model</h1>
+        <h1>Today's Task ?</h1>
         {% for message in messages %}
             <p>{{ message[0] }}</p>
         {% endfor %}
